# Code_Samples_Ubuntu24.04_DellOptiplex7090

./: .gitignore
CPP/A_Tour_of_C++_3rd_ed_by_Stroustrup_Project/src/: ch1.7.1  ch1.7.1.cpp  ch1.8_Tests  ch1.8_Tests.cpp  ch1.9.1_assignment  ch1.9.1_assignment.cpp  ch1_initialization  ch1_initialization.cpp  ch1_p_6_constants  ch1_the_basics  ch1_the_basics.cpp  ch2.2_structures  ch2.2_structures.cpp  ch2.3_classes  ch2.3_classes.cpp  name_space_example  name_space_example.cpp  template  template.cpp
CPP/A_Tour_of_C++_3rd_ed_by_Stroustrup_Project/src/archive/: 1.4.1_arithmetic  1.4.1_arithmetic.cpp  ch1_p_7  file1  file2  file2.cpp  file3  file3.cpp  file4  file4.cpp  first
CPP/Bill_Sky_CPP_Youtube_course/Design/: .$IntroToIfStatements.drawio.bkp
CPP/Bill_Sky_CPP_Youtube_course/MyCppProject/: CMakeLists.txt
CPP/Bill_Sky_CPP_Youtube_course/MyCppProject/include/MyProject/: utils.hpp
CPP/Bill_Sky_CPP_Youtube_course/MyCppProject/src/: Puppy.cpp  Puppy.h  characters_and_strings.cpp  conditional_processing_flowcharts.cpp  constants_scope_and_globals.cpp  dynamic_puppies.cpp  if_statements.cpp  if_statements.h  interactivity_with_formatted_output.cpp  interactivity_with_formatted_output.h  intro_to_object_oriented_programming.cpp  main.cpp  main2.cpp  more_math.cpp  numeric_variables.cpp  object_pointers.cpp  pointers.cpp  pointers_and_arrays.cpp  pointers_and_dynamic_memory_allocation.cpp  program_interactivity.cpp  simple_arithmetic.cpp  simple_files  simple_files.cpp  switch_statement.cpp  switch_statement.h  the_assignment_operator.cpp
CPP/Books/A_Tour_of_C++_3rd_ed_by_Stroustrup_Project/src/: ch4.2_exceptions  ch4.2_exceptions.cpp  ch4.5_assertions.cpp  vector_example  vector_example.cpp
CPP/Books/C++_A_Primer_by_Lippman/src/: scratch.cpp
CPP/Books/C++_A_Primer_by_Lippman/src/1/: ch1.2_first_look_at_io  ch1.2_first_look_at_io.cpp  ch1.5.1_the_sales_item_class  ch1.5.1_the_sales_item_class.cpp  template
CPP/Books/C++_A_Primer_by_Lippman/src/2/: 2.3.1_references  2.3.1_references.cpp  initializers.cpp
CPP/CLionProjects/: CMakeLists.txt  main.cpp
CPP/Courses/Udemy/Design_Patterns_in_Modern_C++/: diary.txt  sec2_vid3_single_responsibility  sec2_vid3_single_responsibility.cpp  sec2_vid4_open-closed_principle.cpp  xx_template_file  xx_template_file.cpp
CPP/Scratch_Project/: CMakeList.txt
CPP/Scratch_Project/src/: 260518_number_string_conversions  260518_number_string_conversions.cpp  file2  std_bind  std_bind.cpp  template
ros2_workspaces/Books/ros2_from_scratch_by_Renard/my_robot_ws/src/my_robot_bringup/: package.xml
ros2_workspaces/Books/ros2_from_scratch_by_Renard/part2_ws/archive/: my_robot.urdf  my_robot.urdf.xacro.first  my_robot_first.urdf
ros2_workspaces/Projects/ros2_ws_sensor_pubsub/src/interfaces/: CMakeLists.txt  package.xml
ros2_workspaces/Projects/ros2_ws_sensor_pubsub/src/sensor_pubsub/: package.xml  setup.cfg  setup.py
ros2_workspaces/ros2_from_scratch_by_Renard_ws/bags/bag1/: bag1_0.mcap
ros2_workspaces/ros2_from_scratch_by_Renard_ws/src/my_cpp_pkg/: CMakeLists.txt  package.xml
ros2_workspaces/ros2_from_scratch_by_Renard_ws/src/my_cpp_pkg/src/: count_until_server_minimal.cpp  my_first_node.cpp  number_publisher.cpp  reset_counter_client.cpp
ros2_workspaces/ros2_from_scratch_by_Renard_ws/src/my_py_pkg/: package.xml
ros2_workspaces/ros2_from_scratch_by_Renard_ws/src/my_py_pkg/launch/: number_params.yaml
ros2_workspaces/ros2_from_scratch_by_Renard_ws/src/my_py_pkg/my_py_pkg/: count_until_client_minimal.py  count_until_server_minimal.py  my_first_node.py  number_counter.py  number_publisher.py  reset_counter_client.py  robot_hardware_status_publisher.py
ros2_workspaces/ros2_from_scratch_by_Renard_ws/src/my_robot_interfaces/: CMakeLists.txt  package.xml
ros2_workspaces/ros2_from_scratch_by_Renard_ws/src/turtle_controller/: setup.py
ros2_workspaces/ros2_from_scratch_by_Renard_ws/src/turtle_controller/turtle_controller/: turtle_controller.py
ros_2/node_oop_template/: node_oop_template.py
(+44 files in other folders)
